--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}" />
-</head>
-<body>
-    <div class="container my-3">
+<html lang="ko" layout:decorate="~{layout}">
+    <div layout:fragment="content" class="container my-3">
         <table class="table">
             <thead class="table-dark">
                 <tr>
@@ -27,7 +21,6 @@
                 </tr>
             </tbody>
         </table>
+        <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
     </div>
-
-</body>
 </html>
