--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}" />
-    <link rel="stylesheet" type="text/css" th:href="@{/style.css}" />
-</head>
-<body>
-    <div class="container my-3">
+<html lang="ko" layout:decorate="~{layout}">
+    <div layout:fragment="content" class="container my-3">
         <!-- 질문 -->
         <h2 class="border-bottom py-2" th:text="${question.subject}"></h2>
         <div class="card my-3">
@@ -36,10 +29,11 @@
         </div>
         <!-- 답변 반복 끝  -->
         <!-- 답변 작성 -->
-        <form th:action="@{|/answer/create/${question.id}|}" method="post" class="my-3">
+        <form th:action="@{|/answer/create/${question.id}|}" method="post" class="my-3" th:object="${answerForm}">
+            <div th:replace="~{form_errors :: formErrorsFragment}"></div>
+
             <textarea name="content" id="content" rows="10" class="form-control"></textarea>
             <input type="submit" value="답변등록" class="btn btn-primary my-2">
         </form>
     </div>
-</body>
 </html>
