--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -1,7 +1,11 @@
 <html layout:decorate="~{layout}">
 <div layout:fragment="content" class="container my-3">
-    <form th:action="@{/user/login}" method="post" th:object="${userLoginForm}">
-        <div th:replace="~{form_errors :: formErrorsFragment}"></div>
+    <form th:action="@{/user/login}" method="post">
+        <div th:if="${param.error}">
+            <div class="alert alert-danger">
+                사용자ID 또는 비밀번호를 확인해 주세요.
+            </div>
+        </div>
         <div class="mb-3">
             <label for="username" class="form-label">사용자ID</label>
             <input type="text" name="username" id="username" class="form-control">
