--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -5,8 +5,12 @@
         <h2 class="border-bottom py-2" th:text="${question.subject}"></h2>
         <div class="card my-3">
             <div class="card-body">
-                <div class="card-text" style="white-space: pre-line;" th:text="${question.content}"></div>
+                <div class="card-text" style="white-space: pre-line;" th:utext="${question.content == null ? '' : @commonUtil.markdown(question.content)}"></div>
                 <div class="d-flex justify-content-end">
+                    <div th:if="${question.modifyDate != null}" class="badge bg-light text-dark p-2 text-start mx-3">
+                        <div class="mb-2">modified at</div>
+                        <div th:text="${#temporals.format(question.modifyDate, 'yyyy-MM-dd HH:mm')}"></div>
+                    </div>
                     <div class="badge bg-light text-dark p-2 text-start">
                         <div class="mb-2">
                             <span th:if="${question.author != null}" th:text="${question.author.username}"></span>
@@ -15,6 +19,11 @@
                     </div>
                 </div>
                 <div class="my-3">
+                    <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"
+                       th:data-uri="@{|/question/vote/${question.id}|}">
+                        추천
+                        <span class="badge rounded-pill bg-success" th:text="${#lists.size(question.voter)}"></span>
+                    </a>
                     <a th:href="@{|/question/modify/${question.id}|}" class="btn btn-sm btn-outline-secondary"
                        th:text="수정"
                        sec:authorize="isAuthenticated()"
@@ -35,15 +44,35 @@
             th:text="|${#lists.size(question.answerList)}개의 답변이 있습니다.|"></h5>
         <!-- 답변 반복 시작 -->
         <div class="card my-3" th:each="answer : ${question.answerList}">
+            <a th:id="|answer_${answer.id}|"></a>
             <div class="card-body">
-                <div class="card-text" style="white-space: pre-line;" th:text="${answer.content}"></div>
+                <div class="card-text" style="white-space: pre-line;" th:utext="${answer.content == null ? '' ? @commonUtil.markdown(answer.content)}"></div>
                 <div class="d-flex justify-content-end">
+                    <div th:if="${answer.modifyDate != null}" class="badge bg-light text-dark p-2 text-start mx-3">
+                        <div class="mb-2">modified at</div>
+                        <div th:text="${#temporals.format(answer.modifyDate, 'yyyy-MM-dd HH:mm')}"></div>
+                    </div>
                     <div class="badge bg-light text-dark p-2 text-start">
                         <div class="mb-2">
                             <span th:if="${answer.author != null}" th:text="${answer.author.username}"></span>
                         </div>
                         <div th:text="${#temporals.format(answer.createDate, 'yyyy-MM-dd HH:mm')}"></div>
                     </div>
+                </div>
+                <div class="my-3">
+                    <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"
+                       th:data-uri="@{|/answer/vote/${answer.id}|}">
+                        추천
+                        <span class="badge rounded-pill bg-success" th:text="${#lists.size(answer.voter)}"></span>
+                    </a>
+                    <a th:href="@{|/answer/modify/${answer.id}|}" class="btn btn-sm btn-outline-secondary"
+                       sec:authorize="isAuthenticated()"
+                       th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
+                       th:text="수정"></a>
+                    <a href="javascript:void(0);" th:data-uri="@{|/answer/delete/${answer.id}|}"
+                       class="delete btn btn-sm btn-outline-secondary" sec:authorize="isAuthenticated()"
+                       th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
+                       th:text="삭제"></a>
                 </div>
             </div>
         </div>
@@ -66,6 +95,16 @@
             if (confirm("정말로 삭제하시겠습니까?")) {
                 location.href = this.dataset.uri;
             }
+        });
+    });
+
+    // 추천 버튼 클릭
+    const recommend_elements = document.getElementsByClassName("recommend");
+    Array.from(recommend_elements).forEach(function(element) {
+        element.addEventListener('click', function() {
+            if(confirm("정말로 추천하시겠습니까?")) {
+                location.href = this.dataset.uri;
+            };
         });
     });
 </script>
